# teleoprtc

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
examples/: cli.py  face_detection.py
examples/face_detection/: README.md  face_detection.py
examples/videostream_cli/: cli.py
src/bodyrtc/: __init__.py  builder.py  stream.py  tracks.py
src/teleoprtc/: tracks.py
teleoprtc/: builder.py  stream.py  tracks.py
tests/: test_info.py  test_integration.py  test_stream.py  test_track.py
