[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "teleoprtc"
version = "1.0.0"
authors = [{ name="Vehicle Researcher", email="user@comma.ai" }]
description = "Comma webRTC abstractions"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "aiortc @ git+https://github.com/aiortc/aiortc.git",
  "aiohttp>=3.7.0",
  "av>=9.0.0,<11.0.0",
  "numpy>=1.19.0",
]

[project.urls]
"Homepage" = "https://github.com/commaai/teleop-webrtc"
"Bug Tracker" = "https://github.com/commaai/teleop-webrtc/issues"

[tool.setuptools.packages.find]
where = ["src"]