[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "teleoprtc"
version = "1.0.0"
authors = [{ name="Vehicle Researcher", email="user@comma.ai" }]
description = "Comma webRTC abstractions"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "aiortc>=1.6.0",
  "aiohttp>=3.7.0",
  "av>=9.0.0,<11.0.0",
  "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
  "parameterized>=0.8",
  "pre-commit"
]

[project.urls]
"Homepage" = "https://github.com/commaai/teleoprtc"
"Bug Tracker" = "https://github.com/commaai/teleoprtc/issues"
